Migration: Refactor project to React + Vite stack (Premium Dark UI)

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,6 @@
 {
     "version": 2,
-    "public": true,
+    "framework": "vite",
     "cleanUrls": true,
-    "trailingSlash": false,
-    "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "/website/$1"
-        }
-    ]
+    "trailingSlash": false
 }
